deploy/mighty-fine/mf-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mighty-fine
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: glob:*
    flux.weave.works/automated: 'true'
spec:
  replicas: 11
  selector:
    matchLabels:
      app: mighty-fine
  template:
    metadata:
      labels:
        app: mighty-fine
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: mighty-fine
        image: quay.io/stefanprodan/podinfo:3.0.0
        command:
        - ./podinfo
        - --port=3000
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
